Shop the look done

--- a/src/components/pairItWith/PDPLooksGridItem/styles.scss
+++ b/src/components/pairItWith/PDPLooksGridItem/styles.scss
@@ -1,6 +1,6 @@
-
-
 @import "../../../styles/partials/variables";
+@import "../../../styles/partials/mixins";
+
 .image-boxnew {
     position: relative;
     display: block;
