--- a/src/components/weRecomend/styles.scss
+++ b/src/components/weRecomend/styles.scss
@@ -59,7 +59,7 @@
         text-transform: capitalize;
     }
     a:hover{
-        color: $gold;
+        // color: $gold;
     }
     span{
         @include b3_14px_med_charcoal();
