--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -776,6 +776,14 @@ $list: $grey 92%, $white 8%;
   letter-spacing: 0.30px;
 }
 
+@mixin b4_12px_med_charcoal_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  color: $med-charcoal;
+  font-weight: normal;
+  letter-spacing: 0.36px;
+}
+
 @mixin b3_14px_gold{
   font-family: $font-Montserrat;
   font-size: 14px;
@@ -805,6 +813,13 @@ $list: $grey 92%, $white 8%;
   font-weight: 600;
   font-size: 10px;
   color: $white;
+  letter-spacing: 0.30px;
+}
+
+@mixin b5_10px_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 10px;
+  color: $charcoal19;
   letter-spacing: 0.30px;
 }
 
