--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -782,6 +782,7 @@ $list: $grey 92%, $white 8%;
   color: $med-charcoal;
   font-weight: normal;
   letter-spacing: 0.36px;
+  text-transform: uppercase;
 }
 
 @mixin b3_14px_gold{
