--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -839,6 +839,14 @@ $list: $grey 92%, $white 8%;
   color: $charcoal19;
 }
 
+@mixin b3_14px_aqua{
+  font-family: $font-Montserrat;
+  font-size: 14px;
+  color: $aqua-bold;
+  font-weight: 600;
+  letter-spacing: 0.30px;
+}
+
 @mixin search_text{
   font-family: $font-Montserrat;
   font-weight: normal;
