--- a/src/containers/pdp/components/WallpaperFAQ/styles.scss
+++ b/src/containers/pdp/components/WallpaperFAQ/styles.scss
@@ -75,10 +75,10 @@
 }
 
 .accordion-title {
+    @include b3_14px_charcoal();
+    font-weight: 600;
     padding-top: 10px;
     padding-left: 5px;
-    font-size: 15px;
-    letter-spacing: 1px;
     margin-bottom: 20px !important;
     cursor: pointer;
     text-align: left;
@@ -87,10 +87,7 @@
 
 .accordion-text {
     width: 90%;
-    font-family: $font-Lato;
-    font-weight: 300;
-    font-size: 13px;
-    color: #4d4d4d;
+    @include b4_12px_charcoal();
     margin: 20px 0;
     line-height: 20px;
     padding-left: 5px;
@@ -148,8 +145,6 @@
 .open-icon, .close-icon {
     width: 28px;
     height: 28px;
-    border-radius: 50%;
-    border: 1px solid #d9d9d9;
     position: absolute;
     font-size: 18px;
     right: 5px;
