--- a/src/containers/pdp/components/wallpaperPopup/styles.scss
+++ b/src/containers/pdp/components/wallpaperPopup/styles.scss
@@ -7,31 +7,32 @@
     min-height: 60vh;
     max-height: 80vh;
     min-width: 30vw;
-    padding: 20px;
     max-height: 75vh;
     overflow: scroll;
-    padding-top: 56px;
     width: 100%;
+    overflow:auto;
+}
+
+.content-container{
+    padding: 20px;
 }
 
 .title {
-    font-size: 14px;
+    @include h3_20px_med_charcoal();
     text-align: center;
 }
 
 .closeButton {
+    font-size: 50px;
     position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 40px;
-    line-height: 1;
-    border: none;
+    right: 0px;
 }
 
 .text {
-    font-size: 13px;
+    @include b4_12px_charcoal();
     margin: 20px 0 30px 0;
-    color: #555;
+    padding: 0px 30px;
+    text-align: center;
 }
 
 .field {
@@ -43,16 +44,36 @@
     margin-top: 20px;
 }
 
+.btn-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.calculate-btn{
+    width: 100%;
+    max-width: 250px;
+    padding: 18px 0px;
+    border: 1.5px solid $aqua;
+    background-color: $aqua;
+    color: $white;
+    text-transform: uppercase;
+    font-family: $font-Montserrat;
+    font-size: 14px;
+    &:hover{
+        color: $aqua;
+        background-color: $white;
+    }
+}
+
+.close-btn-container{
+    height: 50px;
+    border-bottom: 1px solid #9f9f9f36;
+}
+
 @media screen and (min-width: 992px) {
     .container {
-        width: 720px;
+        width: 500px;
         max-width: 50vw;
         min-height: 20vh;
-        padding-top: 25px;
-    }
-
-    .closeButton {
-        top: 20px;
-        right: 7px;
     }
 }
