--- a/src/components/InputField/styles.scss
+++ b/src/components/InputField/styles.scss
@@ -42,7 +42,7 @@ input.input {
   left: 10px;
   font-weight: 100;
   font-size: 10px;
-  color: #999;
+  color: $charcoal19;
   letter-spacing: 1px;
   background-color: #fff;
   padding: 3px;
