Wallpaper FAQ done

--- a/src/components/Accordion/styles.scss
+++ b/src/components/Accordion/styles.scss
@@ -2,7 +2,7 @@
 @import "../../styles/partials/mixins";
 
 .accordion-section {
-    box-shadow: 0px 1px 0px lightgrey;
+  border-bottom: 1px solid lightgray;
 }
 
 .accordion-header {
