--- a/src/containers/pdp/components/WallpaperFAQ/styles.scss
+++ b/src/containers/pdp/components/WallpaperFAQ/styles.scss
@@ -45,6 +45,7 @@
     max-width: max-content;
     cursor: pointer;
     display: flex;
+    position: relative;
     svg {
         height: 50px;
         margin: 20px 0;
@@ -56,6 +57,18 @@
         }
     }
     &.active {
+        // box-shadow: 0px 30px 0px -25px $aqua;
+        .section-title{
+            &::after{
+                content: "";
+                background: #7EAAA9;
+                position: absolute;
+                bottom: 0;
+                height: 5px;
+                width: 90%;
+                right: 20px;
+            }
+        }
         svg {
             stroke: $aqua-bold;
             stroke-width: 0.5px;
@@ -78,8 +91,9 @@
     @include b3_14px_charcoal();
     font-weight: 600;
     padding-top: 10px;
-    padding-left: 5px;
-    margin-bottom: 20px !important;
+    padding-left: 15px;
+    margin-bottom: 10px !important;
+    margin-top: 10px !important;
     cursor: pointer;
     text-align: left;
     position: relative;
@@ -88,13 +102,13 @@
 .accordion-text {
     width: 90%;
     @include b4_12px_charcoal();
-    margin: 20px 0;
+    margin: 0 0 20px 0px;
     line-height: 20px;
-    padding-left: 5px;
+    padding-left: 15px;
     text-align: left;
 
-    a:hover, a:active, a:visited, a:focus {
-        color: $cerise;
+    a:hover, a:active, a:visited, a:focus, a {
+        color: $gold;
     }
 }
 
@@ -111,20 +125,50 @@
 }
 
 @media screen and (max-width: 992px) {
-    .header-sections {
-        display: block;
-    }
-    .header-section {
-        width: 100%;
-        margin: 0px;
+    .horizontal {
+        position: absolute !important;
+        right: 5px;
     }
 
-    .section-title {
-        text-align: left;
-        padding: 15px;
-        background: #f2f2f2;
-        border-bottom: 1px solid #fff;
+    .header-sections {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
+
+    .header-section {
+        width: 100%;
+        max-width: 100%;
+        margin: 0px;
+        flex-direction: column;
+        margin-bottom: 2px;
+        background: #f2f2f2;
+
+        .section-title {
+            text-align: left;
+            border-right: none !important;
+            width: 100%;
+            padding: 15px 0px;
+            margin-right: 0px;
+            svg {
+                margin: 0px 20px;
+                height: 30px;
+            }
+        }
+
+        &.active{
+            background: #fff;
+            .section-title{
+                &::after{
+                    content: "";
+                    display:none;
+                }
+                border-bottom: 5px solid $aqua;
+            }
+
+        }
+    }
+
     .container {
         padding-top: 0;
         margin-bottom: 30px;
@@ -162,4 +206,42 @@
     &::before {
         content: "+";
     }
+}
+
+.horizontal{
+    position: relative;
+    width: 20px;
+    height: 20px;
+
+    &:before,
+    &:after{
+        content: "";
+        position: absolute;
+        background-color: $charcoal19;
+        transition: transform 0.25s ease-out;
+    }
+
+    /* Vertical line */
+    &:before{
+        top: 0;
+        left: 50%;
+        width: 2px;
+        height: 100%;
+       margin-left: -1px;
+    }
+
+    /* horizontal line */
+    &:after{
+        top: 50%;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        margin-top: -1px;
+    }
+}
+
+.open {
+    cursor: pointer;
+    &:before{ transform: rotate(90deg); }
+    &:after{ transform: rotate(180deg); }
 }
