--- a/src/containers/pdp/components/wallpaperPopup/styles.scss
+++ b/src/containers/pdp/components/wallpaperPopup/styles.scss
@@ -83,7 +83,8 @@
     justify-content: center;
 }
 .calculate-btn{
-    width: 250px;
+    width: 100%;
+    height: 100%;
     padding: 18px 0px;
     border: 1.5px solid $aqua;
     background-color: $aqua;
@@ -98,7 +99,8 @@
 }
 
 .close-btn-container{
-    height: 50px;
+    height: 60px;
+    width: 250px;
     border-bottom: 1px solid #9f9f9f36;
 }
 
