--- a/src/components/Sizechart/styles.scss
+++ b/src/components/Sizechart/styles.scss
@@ -418,11 +418,16 @@
         th{
           text-align: center;
           padding: 7px 15px;
+          text-transform: capitalize;
           &:first-child{
             text-align: left;
             font-size: 12px;
             padding: 20px 15px;
             min-width: 220px;
+            width: 220px;
+          }
+          &:not(:first-child){
+            width: auto;
           }
           div{
             margin:0;
