--- a/src/components/header/templates/styles.scss
+++ b/src/components/header/templates/styles.scss
@@ -406,5 +406,25 @@
             padding-left: 20px;
             line-height: 18px;
         }
+        .mobile-title{
+            border-bottom: none;
+            line-height: 30px;
+            letter-spacing: .05em;
+            font-size: 12px;
+            font-weight: 600;
+            text-transform: uppercase;
+            color: #000;
+            font-family: "LatoFont", "Helvetica", "Arial";
+        }
+        .mobile-heading{
+            border-bottom: none;
+            line-height: 18px;
+            letter-spacing: .05em;
+            display: block;
+            font-size: 12px;
+            font-weight: bold;
+            color: #000;
+            font-family: "LatoFont", "Helvetica", "Arial";
+        }
     }
 }
