--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -45,7 +45,8 @@ $pdp-top: $header-height + $secondary-header-height;
 .product-section {
     position: relative;
     padding-bottom: 100px;
-    z-index: 6;
+    // z-index: 6;
+    z-index: 5;
     justify-content: center;
 }
 
