--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -356,11 +356,6 @@
   letter-spacing: 1px;
 }
 
-@mixin plp_filter_copy {
-  font-size: 10px;
-  color: $charcoal19;
-}
-
 @mixin curveBtnLink {
   display: inline-block;
   text-transform: uppercase;
@@ -898,6 +893,13 @@ $list: $grey 92%, $white 8%;
   color: $charcoal19;
   letter-spacing: 0.54px;
   font-weight: lighter;
+}
+
+@mixin b4_12px_med_gold_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  color: $gold;
+  text-transform: uppercase;
 }
 
 @mixin err_13px_lora_italic_cerise{
