Addition sections and list view bdage fix

--- a/src/components/plpResultListViewItem/styles.scss
+++ b/src/components/plpResultListViewItem/styles.scss
@@ -199,7 +199,8 @@
     left: 0;
     img {
         width: 70%;
-        margin: 10px 0 0 10px;
+        // margin: 10px 0 0 10px;
+        margin: 0;
     }
 }
 
@@ -211,7 +212,8 @@
     right: 6px;
     img {
         width: 70%;
-        margin: 10px 0 0 10px;
+        // margin: 10px 0 0 10px;
+        margin: 0;
     }
 }
 
