--- a/src/containers/search/slider.css
+++ b/src/containers/search/slider.css
@@ -14,7 +14,7 @@
 } */
 
 .custom-slider .rc-slider-handle {
-    background-color: rgb(171, 30, 86);
+    background-color: black;
     border-radius: 0;
     border: 0;
     width: 2px;
@@ -22,7 +22,7 @@
 
 }
 .custom-slider .rc-slider-track {
-    background-color: rgb(171, 30, 86);
+    background-color: black;
     height: 2px;
     border-radius: 0;
 }
