--- a/src/containers/search/styles.scss
+++ b/src/containers/search/styles.scss
@@ -609,7 +609,7 @@ input[type="radio"]:checked, [type="checkbox"]:not(:checked),
     background-color: $light-bg !important;
   }
   .rc-slider-handle {
-    background-color: rgb(171, 30, 86);
+    background-color: black;
     border-radius: 0;
     border: 0;
     width: 2px;
@@ -617,7 +617,7 @@ input[type="radio"]:checked, [type="checkbox"]:not(:checked),
 
   }
   .rc-slider-track {
-    background-color: rgb(171, 30, 86);
+    background-color: black;
     height: 2px;
     border-radius: 0;
   }
