--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -394,7 +394,7 @@ input[type="checkbox"]:checked + label {
   cursor: pointer;
   font-weight: normal;
   font-size: 12px !important;
-  font-family: $font-Lato;
+  font-family: $font-Montserrat;
 }
 
 @media screen and (max-width: 768px) {
