--- a/src/containers/search/styles.scss
+++ b/src/containers/search/styles.scss
@@ -206,7 +206,7 @@
         @include cta_white();
         color: white;
       }
-      background-color: $cerise;
+      background-color: $med-charcoal;
     }
     .filter-button {
       width: 100%;
