--- a/src/components/collectionItem/styles.scss
+++ b/src/components/collectionItem/styles.scss
@@ -15,13 +15,10 @@
     margin: 0 auto 3em auto;
     min-height: 115px;
     p {
-        font-family: $font-Serif;
-        font-size: 22px;
-        font-weight: 400;
+        @include h3_20px_med_charcoal();
         letter-spacing: 1px;
         padding: 0 20px;
         line-height: 33px;
-        color: #000;
     }
     .para {
         margin-top: 5px;
