--- a/src/components/plpResultListViewItem/styles.scss
+++ b/src/components/plpResultListViewItem/styles.scss
@@ -214,6 +214,9 @@
 
 .actions {
     margin: 5px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     .add-to-bag-list-view {
         line-height: 38px;
     }
