Clear button fix

--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -347,10 +347,8 @@
       cursor: pointer;
       text-decoration: underline;
       text-transform: capitalize;
-      span {
-        &:hover{
-          color: $aqua;
-        }
+      &:hover{
+        color: $aqua-bold;
       }
     }
   }
