--- a/src/containers/wishlist/styles.scss
+++ b/src/containers/wishlist/styles.scss
@@ -554,7 +554,7 @@ icon-cross {
 }
 .badge-position-plp {
   width: 30%;
-  top: 10px;
+  top: 0;
   z-index: 4;
   position: absolute;
   z-index: 1;
