color label checkbox new

--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -573,15 +573,17 @@
   input[type="checkbox"]:checked + label:before {
     content: '';
     position: absolute;
+    padding:2px;
+    background-clip: content-box;
     left: 0;
     top: 6px;
     width: 25px;
     height: 25px;
     border-radius: 50%;
     background-color: var(--my-color-var);
-    -moz-box-shadow: inset 0 2px 6px #0e0b0b;
-    -webkit-box-shadow: inset 0 2px 6px #929292;
-    box-shadow: inset 0 2px 6px #929292;
+  }
+  input[type="checkbox"]:checked + label:before{
+    border: 1px solid black;
   }
 }
 
@@ -589,6 +591,7 @@
   input[type="radio"]:not(:checked) + label:before,
   input[type="radio"]:checked + label:before, [type="checkbox"]:not(:checked) + label:before,
   input[type="checkbox"]:checked + label:before {
+    background-clip: content-box;
     background-image: var(--my-bg-image);
   }
 }
